--- a/results/report/report.html
+++ b/results/report/report.html
@@ -1,15 +1,15 @@
 <h1>DNA QML — Results Report</h1>
+<link rel="stylesheet" href="report.css">
 <p><b>Environment:</b> Python 3.10.13 on Windows 10</p>
 <h2>Test Metrics Summary</h2>
-<table border="1" class="dataframe">
   <thead>
-    <tr style="text-align: right;">
-      <th>model</th>
-      <th>acc</th>
-      <th>prec</th>
-      <th>rec</th>
-      <th>f1</th>
-      <th>auc</th>
+    <tr class="align-right">
+      <th scope="col">model</th>
+      <th scope="col">acc</th>
+      <th scope="col">prec</th>
+      <th scope="col">rec</th>
+      <th scope="col">f1</th>
+      <th scope="col">auc</th>
     </tr>
   </thead>
   <tbody>
@@ -48,7 +48,7 @@
   </tbody>
 </table>
 <h2>Timing (from noise_sweep_run_report.json)</h2>
-<pre style='white-space:pre-wrap;font-size:12px;'>{
+<pre>{
   "config": {
     "D": 6,
     "MAX_TR": 160,
@@ -92,15 +92,15 @@
   }
 }</pre>
 <h2>ROC Curves (test)</h2>
-<div style='margin:10px 0'><img src='results/figures/roc_test.png' width='640' alt='ROC curve (test set)'></div>
+<div><img src='results/figures/roc_test.png' width='640' alt='ROC curve (test set)'></div>
 <h2>Test F1 by Model</h2>
-<div style='margin:10px 0'><img src='results/figures/bar_f1_test.png' width='640' alt='Test F1 by Model'></div>
+<div><img src='results/figures/bar_f1_test.png' width='640' alt='Test F1 by Model'></div>
 <h2>Confusion Matrices (test)</h2>
 <h4>qsvm_kernel</h4>
-<div style='margin:10px 0'><img src='results/figures/cm_qsvm_kernel.png' width='420' alt='Confusion matrix for QSVM kernel model (test set)'></div>
+<div><img src='results/figures/cm_qsvm_kernel.png' width='420' alt='Confusion matrix for QSVM kernel model (test set)'></div>
 <h4>svm_kmer</h4>
-<div style='margin:10px 0'><img src='results/figures/cm_svm_kmer.png' width='420' alt='Confusion matrix for SVM k-mer model (test set)'></div>
+<div><img src='results/figures/cm_svm_kmer.png' width='420' alt='Confusion matrix for SVM k-mer model (test set)'></div>
 <h4>svm_onehot</h4>
-<div style='margin:10px 0'><img src='results/figures/cm_svm_onehot.png' width='420' alt='Confusion matrix for SVM one-hot model (test set)'></div>
+<div><img src='results/figures/cm_svm_onehot.png' width='420' alt='Confusion matrix for SVM one-hot model (test set)'></div>
 <h4>vqc</h4>
-<div style='margin:10px 0'><img src='results/figures/cm_vqc.png' width='420' alt='Confusion matrix for VQC model (test set)'></div>
+<div><img src='results/figures/cm_vqc.png' width='420' alt='Confusion matrix for VQC model (test set)'></div>
